# natural-capital-footprint-impact

./: LICENSE.md  README.md  footprint_stats.gpkg  pyproject.toml  requirements.txt  taskgraph_data.db
src/: aggregate.py  bin_percentiles.py  buffer_points.py  footprint_stats.py  test.py  workflow.py
src/impact/: cli.py  src.py
src/natural_capital_footprint_impact.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test.py
